--- a/views/components/mobile-menu.ejs
+++ b/views/components/mobile-menu.ejs
@@ -1,3 +1,4 @@
+    <!-- =========== Mobile Menu Start (Offcanvas) =========== -->
     <div id="mobileMenu" class="fc-offcanvas-open:translate-x-0 translate-x-full fixed top-0 end-0 transition-all duration-200 transform h-full w-full max-w-md z-50 bg-white border-s hidden">
         <div class="flex flex-col h-full divide-y-2 divide-gray-200">
             <!-- Mobile Menu Topbar Logo (Header) -->
@@ -169,8 +170,10 @@
             </div>
 
             <!-- Mobile Menu Download Button (Footer) -->
-            <div class="p-6 flex items-center justify-center">
-                <a href="https://1.envato.market/prompt-tailwind" target="_blank" class="bg-primary w-full text-white p-3 rounded flex items-center justify-center text-sm">Download</a>
-            </div>
+            <div class="p-6 flex flex-col gap-2 items-center justify-center">
+                <a href="/login" class="bg-primary w-full text-white p-3 rounded flex items-center justify-center text-sm">Download</a>
+				<a href="/register" class="bg-primary/10 w-full text-primary/90 p-3 rounded flex items-center justify-center text-sm border border-blue-600/20">Sign Up</a>
+			</div>
         </div>
     </div>
+    <!-- =========== Mobile Menu End =========== -->
