--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,7 +1,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title><%= title %></title>
-<link rel="stylesheet" href="assets/css/styles.css">
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#317EFB">
 <meta content="I-A.Dev" name="author" />
@@ -10,3 +9,4 @@
 <link href="/assets/libs/aos/aos.css" rel="stylesheet" type="text/css">
 <link href="/assets/css/style.min.css" rel="stylesheet" type="text/css">
 <link href="/assets/css/icons.min.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="/assets/css/styles.css">
