--- a/views/admin/components/header.ejs
+++ b/views/admin/components/header.ejs
@@ -24,7 +24,7 @@
                                 <span class="shrink-0 me-2">
                                     <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Stockholm-icons / Files / Group-folders</title><desc>Created with Sketch.</desc><g id="Stockholm-icons-/-Files-/-Group-folders" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <rect id="bound" x="0" y="0" width="24" height="24"></rect> <path d="M4.5,21 L21.5,21 C22.3284271,21 23,20.3284271 23,19.5 L23,8.5 C23,7.67157288 22.3284271,7 21.5,7 L11,7 L8.43933983,4.43933983 C8.15803526,4.15803526 7.77650439,4 7.37867966,4 L4.5,4 C3.67157288,4 3,4.67157288 3,5.5 L3,19.5 C3,20.3284271 3.67157288,21 4.5,21 Z" id="Combined-Shape" fill="currentColor" opacity="0.3"></path> <path d="M2.5,19 L19.5,19 C20.3284271,19 21,18.3284271 21,17.5 L21,6.5 C21,5.67157288 20.3284271,5 19.5,5 L9,5 L6.43933983,2.43933983 C6.15803526,2.15803526 5.77650439,2 5.37867966,2 L2.5,2 C1.67157288,2 1,2.67157288 1,3.5 L1,17.5 C1,18.3284271 1.67157288,19 2.5,19 Z" id="Combined-Shape-Copy" fill="currentColor"></path></g></svg>
                                 </span>    
-                                <span class="grow">Projects</span>
+                                <span class="grow">Client</span>
                             </a>
                         </li>
                         <li class="nav-item pe-4">
@@ -32,17 +32,38 @@
                                 <span class="shrink-0 me-2">
                                     <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Stockholm-icons / Text / Article</title><desc>Created with Sketch.</desc><g id="Stockholm-icons-/-Text-/-Article" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><rect id="bound" x="0" y="0" width="24" height="24"></rect><rect id="Rectangle-20" fill="currentColor" x="4" y="5" width="16" height="3" rx="1.5"></rect><path d="M5.5,15 L18.5,15 C19.3284271,15 20,15.6715729 20,16.5 C20,17.3284271 19.3284271,18 18.5,18 L5.5,18 C4.67157288,18 4,17.3284271 4,16.5 C4,15.6715729 4.67157288,15 5.5,15 Z M5.5,10 L12.5,10 C13.3284271,10 14,10.6715729 14,11.5 C14,12.3284271 13.3284271,13 12.5,13 L5.5,13 C4.67157288,13 4,12.3284271 4,11.5 C4,10.6715729 4.67157288,10 5.5,10 Z" id="Combined-Shape" fill="currentColor" opacity="0.3"></path></g></svg>
                                 </span>    
-                                <span class="grow">Tasks</span>
+                                <span class="grow">Users</span>
                             </a>
                         </li>
-                        <li class="nav-item pe-4">
-                            <a class="nav-link flex items-center font-medium py-2 px-4 lg:py-0 text-gray-700 hover:text-primary transition-all" href="#">
-                                <span class="shrink-0 me-2">
-                                    <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Stockholm-icons / Media / Equalizer</title><desc>Created with Sketch.</desc><g id="Stockholm-icons-/-Media-/-Equalizer" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><rect id="bound" x="0" y="0" width="24" height="24"></rect><rect id="Rectangle-62-Copy" fill="currentColor" opacity="0.3" x="13" y="4" width="3" height="16" rx="1.5"></rect><rect id="Rectangle-62-Copy-2" fill="currentColor" x="8" y="9" width="3" height="11" rx="1.5"></rect><rect id="Rectangle-62-Copy-4" fill="currentColor" x="18" y="11" width="3" height="9" rx="1.5"></rect><rect id="Rectangle-62-Copy-3" fill="currentColor" x="3" y="13" width="3" height="7" rx="1.5"></rect></g></svg>
-                                </span>    
-                                <span class="grow">Reports</span>
-                            </a>
-                        </li>
+                        <li class="nav-item relative pe-4">
+							<a class="nav-link flex items-center font-medium py-2 px-4 lg:py-0 text-gray-700 hover:text-primary transition-all cursor-pointer" href="#" data-dropdown="reports">
+								<span class="shrink-0 me-2">
+									<svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><title>Stockholm-icons / Media / Equalizer</title><desc>Created with Sketch.</desc><g id="Stockholm-icons-/-Media-/-Equalizer" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><rect id="bound" x="0" y="0" width="24" height="24"></rect><rect id="Rectangle-62-Copy" fill="currentColor" opacity="0.3" x="13" y="4" width="3" height="16" rx="1.5"></rect><rect id="Rectangle-62-Copy-2" fill="currentColor" x="8" y="9" width="3" height="11" rx="1.5"></rect><rect id="Rectangle-62-Copy-4" fill="currentColor" x="18" y="11" width="3" height="9" rx="1.5"></rect><rect id="Rectangle-62-Copy-3" fill="currentColor" x="3" y="13" width="3" height="7" rx="1.5"></rect></g></svg>
+								</span>
+								<span class="grow">Reports</span>
+								<svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+									<path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"></path>
+								</svg>
+							</a>
+							<ul class="dropdown-menu absolute hidden text-gray-700 mt-4 bg-white border shadow-lg rounded-lg w-48" data-dropdown="reports">
+								<li>
+									<a href="#" class="block px-4 py-2 hover:bg-gray-200">
+										Payment Reports
+									</a>
+								</li>
+								<li>
+									<a href="#" class="block px-4 py-2 hover:bg-gray-200">
+										Users by Client
+									</a>
+								</li>
+								<li>
+									<a href="#" class="block px-4 py-2 hover:bg-gray-200">
+										Product by Client
+									</a>
+								</li>
+							</ul>
+						</li>
+
                         <li class="nav-item pe-4">
                             <a class="nav-link flex items-center font-medium py-2 px-4 lg:py-0 text-gray-700 hover:text-primary transition-all" href="#">
                                 <span class="shrink-0 me-2">
@@ -140,7 +161,7 @@
                                         </div>
                                     </div>
                                     <div class="hidden lg:block grow ms-1 leading-normal">
-                                        <span class="block text-sm font-medium">Greeva</span>
+                                        <span class="block text-sm font-medium">Fitri Hy</span>
                                         <span class="block text-gray-400 text-xs">Admin</span>
                                     </div>
                                 </div>
@@ -149,20 +170,12 @@
                             <div id="innerPageDropdownMenu" class="hidden opacity-0 mt-4 fc-dropdown-open:opacity-100 fc-dropdown-open:translate-y-0 translate-y-3 origin-center transition-all bg-white rounded-lg shadow-lg border p-2 w-48 space-y-1.5">
                                 <!-- Dropdown item -->
                                 <div class="nav-item rounded hover:bg-slate-100 transition-all">
-                                    <a class="nav-link !p-2" href="#">
+                                    <a class="nav-link !p-2" href="/admin/profile">
                                         <svg class="h-4 w-4 me-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user icon icon-xxs me-1 icon-dual"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
                                         Profile
                                     </a>
                                 </div>
-
-                                <!-- Dropdown item -->
-                                <div class="nav-item rounded hover:bg-slate-100 transition-all">
-                                    <a class="nav-link !p-2" href="#">
-                                        <svg class="h-4 w-4 me-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings icon icon-xxs me-1 icon-dual"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>
-                                        Settings
-                                    </a>
-                                </div>
-
+								
                                 <!-- Dropdown item -->
                                 <div class="nav-item rounded hover:bg-slate-100 transition-all">
                                     <a class="nav-link !p-2" href="#">
